--- a/testSite.html
+++ b/testSite.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
     <script src="sketchTest.js"></script>
   </head>
-  <body>
+  <body id="bodyID">
     <main>
     </main>
   </body>
