added search bar for constants

--- a/GaussError/index.html
+++ b/GaussError/index.html
@@ -56,7 +56,10 @@
 					</tr>
 				</thead>
 				</table>
-				<div id='add-row-consts-div'>
+				<div id='add-natural-const-div' class="autocomplete" style="width: 300px; padding: 10px;">
+					<input type="text" placeholder="Search for constant" id="add-natural-const-input">
+				</div>
+				<div id='add-row-consts-div' style="padding: 10px;">
 				<button id='add-row-consts-btn-custom'>
 					Add custom constant
 				</button>
